# dithereens

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
benches/: comparison.rs  dithering.rs  iterator_adapters.rs  multichannel.rs  rayon_comparison.rs  simple.rs
examples/: dither_2d.rs  float_precision_dither.rs  gradient_image.rs  hash_dither.rs  iterator_adapters.rs  parallel_dither.rs
src/: lib.rs  linear.rs  spatial.rs
tests/: blue_noise_table_test.rs  enum_dispatch_test.rs  exr_dithering.rs  float_conversion.rs  hash_diagnostics.rs  hash_distribution.rs  image_dithering.rs  integration_tests.rs  rayon_integration.rs  rayon_tests.rs  seed_test.rs
