[package]
name = "dithereens"
version = "0.3.0"
authors = ["Moritz Moeller <virtualritz@protonmail.com>"]
edition = "2024"
keywords = ["graphics", "dithering", "images"]
categories = ["graphics", "multimedia::images"]
license = "Apache-2.0 OR BSD-3-Clause OR MIT OR Zlib"
description = "Functions & traits for quantizing values with error-diffusion"
exclude = [".github/**/*", "crates/**/*", "examples/**/*"]
readme = "README.md"
documentation = "https://docs.rs/dithereens/"
repository = "https://github.com/virtualritz/dithereens/"

[features]
default = ["rayon", "std"]
## Enables `std`-only features.
std = []
## Pulls in `libm` for faster `round()` implementation.
libm = ["dep:libm"]
## Enables parallel processing via `rayon`.
rayon = ["dep:rayon", "dep:smallvec"]
## Enables support for native `f16` type (requires `nightly`).
nightly_f16 = ["common_traits/nightly_f16"]

[dependencies]
common_traits = { git = "https://github.com/virtualritz/common_traits.git", default-features = false }
libm = { version = "0.2", optional = true }
rand_core = { version = "0.9", default-features = false }
rayon = { version = "1", optional = true }
smallvec = { version = "1", optional = true }

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
image = "0.25"
num_cpus = "1"
wyrand = { version = "0.3", features = ["rand_core"], default-features = false }

[[bench]]
name = "dithering"
harness = false

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "simple"
harness = false

[[bench]]
name = "rayon_comparison"
harness = false
